# chip8-emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: chip8.hpp
src/: chip8.cpp  main.cpp
